@@ -1,3 +1,5 @@
+[B]1.2.1:[/B]
+Remove Serialy as there is a separate addon for it (topserialy)
 [B]1.2.0:[/B]
 Show stream languages
 Use html5lib for HTML parsing
